# ads-roadmap

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  README.md.backup  commitlint.config.js  docker-compose.yml  package-lock.json  requirements.txt  vercel.json
.claude/: settings.local.json
.cursor/rules/: specify-rules.mdc
.github/workflows/: build-image-on-push-tag-to-shared-ecr.yaml  ci.yml
.specify/memory/: constitution.md
api/: index.py
backend/: .dockerignore  .env.example  build.sh  coverage.xml  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  run.py  setup.cfg
backend/api/: index.py
backend/app/: __init__.py  config.py
backend/config/: feature_request_routing.json  feature_request_routing.schema.json  jira_projects.example.json  jira_projects.json  jira_projects.schema.json
backend/docker/: Dockerfile  entrypoint.sh
backend/tests/: conftest.py
docs/: DEPLOYMENT_ONBOARDING.md  JIRA_LIKES_FIELD_MIGRATION.md  VOICE_MODE_SETUP.md
frontend/: .env.example  .env.production  .env.test  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  stylelint.config.js  vite.config.ts  vitest.config.ts
frontend/docker/: BUILD_ARGS_GUIDE.md  Dockerfile  KUBERNETES_SECRET_CONFIG.md  README.md  build-test.sh  nginx.conf
frontend/mocks/: roadmapData.ts
frontend/public/: webchat-audio.umd.js
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/tests/: setup.ts
specs/001-public-roadmap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-constitution-refactor/: CI-FIXES-SUMMARY.md  TASK-GENERATION-REPORT.md  ci-fixes-data-model.md  ci-fixes-plan.md  ci-fixes-quickstart.md  ci-fixes-tasks.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-constitution-refactor/contracts/: ci.yml  eslint.config.js  pre-commit-config.yaml  pyproject.toml  vitest.config.ts
specs/003-jira-custom-fields/: IMPLEMENTATION_UPDATE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cli-jira-field-mapping/: ENHANCEMENT_AUTO_MAPPING.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-netlify-deployment/: CI_CD_SETUP.md  DEPLOYMENT_URLS.md  ENV_VARIABLES_CHECKLIST.md  KNOWN_ISSUES.md  PERFORMANCE.md  ROLLBACK_RUNBOOK.md  TROUBLESHOOTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-epic-likes-multi-select/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-roadmap-feature-request/: RATE_LIMITS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-epic-viewer-enhancements/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-jira-text-formatting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-canvas-conversational-search/: FIX_EMPTY_BUILD_ARGS.md  GITHUB_ACTIONS_BUILD_ARGS.md  KUBERNETES_ENV_SETUP.md  NETLIFY_ENV_SETUP.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-readme-jira-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+106 files in other folders)
